websocket/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: websocket
  namespace: rc
spec:
  selector:
    env: rc
    module: service
    application: websocket
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
